# discord-manager-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/endpoints/: admin.py  auth.py  example.py  health.py  users.py  webhooks.py
app/core/: __init__.py  auth.py  config.py  scheduler.py  security.py
app/database/: __init__.py  database.py  models.py
app/models/: example.py  responses.py
app/services/: discord_service.py  example_service.py
app/utils/: common.py
docs/: api.md  setup.md
tests/: __init__.py  conftest.py  test_auth.py  test_background_tasks.py  test_coverage_extras.py  test_discord_endpoints.py  test_discord_service.py  test_endpoints.py  test_integration.py  test_services.py  test_utils.py
