[project]
name = "t-backend-python"
version = "1.0.0"
description = "FastAPI microservice template with UV and Granian"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3",
    "granian>=2.6.0",
    "pydantic>=2.12.4",
    "pydantic[email]>=2.12.4",
    "asgi-lifespan>=2.1.0",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "motor>=3.7.1",
    "beanie>=2.0.1",
    "tenacity>=9.1.4",
    "apscheduler>=3.11.2",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.1",
    "bcrypt>=4.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.28.1",
    "ruff>=0.1.0",
    "respx>=0.22.0",
    "pytest-mock>=3.15.1",
    "mongomock-motor>=0.0.36",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.28.1",
    "ruff>=0.1.0",
    "respx>=0.22.0",
    "pytest-mock>=3.15.1",
    "mongomock-motor>=0.0.36",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
